syntax = "proto3";

package subjectservice;

service SubjectService {
    rpc GetAll (GetAllRequest) returns (GetAllSubjects) {} 
    rpc GetAllSchedules (GetAllSchedulesRequest) returns (GetAllSchedules) {}
    rpc GetByID (GetByIDRequest) returns (GetSubject) {}
    rpc GetByCourseID (GetByCourseIDRequest) returns (GetAllSubjects) {}
    rpc GetSchedulesByID (GetSchedulesByIDRequest) returns (GetAllSchedules) {}
    rpc GetByScheduleID (getByScheduleIDRequest) returns (GetAllSchedules) {}
}

message GetAllRequest {};

message GetSubject {
    string subjectID = 1;
    string courseID = 2;
    string name = 3; 
}

message GetAllSubjects {
    repeated GetSubject subjects = 1;
}

message GetAllSchedulesRequest {};

message GetSchedule {
    string scheduleID = 1;
    string subjectID = 2;
    string day = 3;
    string schedule = 4;
};

message GetAllSchedules {
    repeated GetSchedule schedules = 1;
}

message GetByIDRequest {
    string subjectID = 1;
};

message GetByCourseIDRequest {
    string courseID = 1;
};

message GetSchedulesByIDRequest {
 string subjectID = 1;
};

message getByScheduleIDRequest {
    string subjectID = 1;
    string scheduleID = 2; 
}